Closed
Bug 849909
Opened 12 years ago
Closed 12 years ago
BaselineCompiler: Fix ARM crash on Box2D, CodeLoad, and GameBoy
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: djvj, Unassigned)
References
Details
Attachments
(1 file)
|
1.58 KB,
patch
|
mjrosenb
:
review+
|
Details | Diff | Splinter Review |
AWFY ARM has these octane benches crashing.
| Reporter | ||
Comment 1•12 years ago
|
||
Issue was branch32(Condition, Operand, Register, Label) and branch32(Condition, Operand, Imm32, Label).
Both used ma_ldr to load the Operand into a register before doing the cmp32. However, Operand can also be a plain register. This modifies branch32 to handle that case efficiently.
Attachment #723638 -
Flags: review?(mrosenberg)
Updated•12 years ago
|
Attachment #723638 -
Flags: review?(mrosenberg) → review+
| Reporter | ||
Comment 2•12 years ago
|
||
Pushed, waiting for tbpl green to close:
https://hg.mozilla.org/projects/ionmonkey/rev/4283f40d30ab
Comment 3•12 years ago
|
||
Time to close?
| Reporter | ||
Comment 4•12 years ago
|
||
Yes.
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•