Bug 849909 - Fix ARM crash on Box2D, CodeLoad and GameBoy. r=mjrosenb